# otus-cpp-developer

./: .gitignore  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_2accdbac4b8c5cb7597d2973ff2573f9.html  dir_2accdbac4b8c5cb7597d2973ff2573f9.js  dir_83271dc0af02e312dabd99a0e7db04fd.html  dir_83271dc0af02e312dabd99a0e7db04fd.js  dir_87ec646c5e1d632b912bd321cfb02e76.html  dir_87ec646c5e1d632b912bd321cfb02e76.js  dir_daeab5731940d118b46e705a2bf63290.html  dir_daeab5731940d118b46e705a2bf63290.js  dir_db6a84d41b91c4e65bf175124746b94e.html  dir_db6a84d41b91c4e65bf175124746b94e.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_rela.html  functions_s.html  functions_type.html  functions_v.html  functions_vars.html  (+13 more)
.github/workflows/: documentation.yml  release.yml  static.yml
allocator/: CMakeLists.txt  allocator.h  benchmark.cpp  forwardlist.h  main.cpp  myclass.h  poolalloc.h  poolallocator.h
allocator1/: benchmark.cpp  linearallocator.h  main.cpp
d0/dc4/: structLinearAllocator_1_1rebind-members.html
d0/dd5/: structForwardList_1_1Node.html  structForwardList_1_1Node.js
d1/d05/: hw3-allocator_2main_8cpp.html  hw3-allocator_2main_8cpp.js  hw3-allocator_2main_8cpp_source.html
d1/d44/: hw3-allocator_2poolallocator_8h.html  hw3-allocator_2poolallocator_8h.js  hw3-allocator_2poolallocator_8h_source.html
d1/d54/: classPoolAllocator.html  classPoolAllocator.js
d2/d16/: classForwardList_1_1ForwardListConstIterator.html  classForwardList_1_1ForwardListConstIterator.js
d2/db3/: allocator1_2main_8cpp.html  allocator1_2main_8cpp.js  allocator1_2main_8cpp_source.html
d3/d1a/: structPoolAllocator_1_1rebind-members.html
d3/d2a/: test__ip__filter_8cpp.html  test__ip__filter_8cpp.js  test__ip__filter_8cpp_source.html
d3/d4f/: classPool-members.html
d3/d9d/: structPoolAllocator_1_1rebind.html  structPoolAllocator_1_1rebind.js
d3/df3/: structIpAddr.html  structIpAddr.js
d4/d46/: ipaddrpool_8h.html  ipaddrpool_8h.js  ipaddrpool_8h_source.html
d4/d58/: myclass_8h.html  myclass_8h.js  myclass_8h_source.html
d4/d6f/: classForwardList.html  classForwardList.js
d4/d91/: linearallocator_8h.html  linearallocator_8h.js  linearallocator_8h_source.html
d4/dbf/: main_8h.html  main_8h.js  main_8h_source.html
d4/dfa/: hw4-sfinae_2main_8cpp.html  hw4-sfinae_2main_8cpp.js  hw4-sfinae_2main_8cpp_source.html
d5/d0b/: classPool.html  classPool.js
d5/d45/: printip_8h.html  printip_8h.js  printip_8h_source.html
d5/d5a/: ipaddrpool_8cpp.html  ipaddrpool_8cpp_source.html
d5/d76/: test__version_8cpp.html  test__version_8cpp.js  test__version_8cpp_source.html
d5/db5/: structLinearAllocator_1_1rebind.html  structLinearAllocator_1_1rebind.js
d6/d67/: classIpAddrPool-members.html
d6/d87/: classReader.html  classReader.js
d6/dda/: reader_8h.html  reader_8h.js  reader_8h_source.html
d7/d28/: allocator1_2poolallocator_8h.html  allocator1_2poolallocator_8h.js  allocator1_2poolallocator_8h_source.html
d7/d7d/: hw3-allocator_2benchmark_8cpp.html  hw3-allocator_2benchmark_8cpp.js  hw3-allocator_2benchmark_8cpp_source.html
d7/dca/: allocator1_2benchmark_8cpp.html  allocator1_2benchmark_8cpp.js  allocator1_2benchmark_8cpp_source.html
d7/dff/: reader_8cpp.html  reader_8cpp_source.html
d8/d31/: structForwardList_1_1Node-members.html
d8/d3b/: classForwardList-members.html
d8/daa/: lib_8cpp.html  lib_8cpp.js  lib_8cpp_source.html
d8/de2/: hw3-allocator_2CMakeLists_8txt.html
d9/d1a/: classmyallocator.html  classmyallocator.js
d9/d86/: hw4-sfinae_2CMakeLists_8txt.html
d9/da7/: classLinearAllocator.html  classLinearAllocator.js
d9/dc5/: structip__filter__fixture.html  structip__filter__fixture.js
hw1-build-test-deploy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
hw10-async-server/: CMakeLists.txt  asyncserver.h  main.cpp  parser.cpp
hw11-join-server/: CMakeLists.txt  asyncserver.h  dbmanager.cpp  dbmanager.h  errorcode.h  main.cpp  parser.cpp  parser.h
hw12-map-reduce/: Makefile  mapper  mapper.cpp  mapper_mean.cpp  mapper_sd.cpp  output_mean  reducer.cpp  reducer_mean.cpp  reducer_sd.cpp  run_locally_mean.sh  run_locally_sd.sh
hw13-ml-inference/: CMakeLists.txt
hw2-ip-filtering/: CMakeLists.txt  ip_filter_1.tsv  main.cpp  main.h  test_ip_filter.cpp
hw3-allocator/: CMakeLists.txt  forwardlist.h  linearallocator.cpp  linearallocator.h  main.cpp
hw4-sfinae/: CMakeLists.txt  main.cpp  printip.h
hw6-matrix/: CMakeLists.txt  main.cpp  matrix.h
hw7-packet-parser/: CMakeLists.txt  cmdparser.cpp  cmdparser.h  cmdsource.cpp  cmdsource.h  consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  main.cpp  parser.cpp  parser.h
hw8_boost/: CMakeLists.txt  config.cpp  config.h  duplicatefinder.cpp  duplicatefinder.h  main.cpp
hw9-multithreading/: CMakeLists.txt  async.cpp  async.h  asyncdefs.h  consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  main.cpp  parser.cpp  parser.h  waitingqueue.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+32 more)
(+41 files in other folders)
